# pixverse.back

./: .env  .env-example  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yaml  pyproject.toml  test.conf  test.py  test.sh
docker/: Dockerfile
nginx/: pixverse.conf  web.conf
scripts/: start.sh  start_api.sh  start_job.sh
services/api/: main.py
services/auth/: main.py
services/calories/: main.py
services/chatgpt/: main.py
services/cosmetic/: main.py
services/dashboard/: main.py
services/instagram/: main.py
services/jobs/: pixverse_account.py  pixverse_style.py  pixverse_template.py
services/pixverse/: main.py
services/qwen/: main.py
services/topmedia/: main.py
src/domain/: constants.py
src/domain/conf/: __init__.py  core.py
src/domain/conf/envs/: __init__.py  development.py  production.py  test.py
src/domain/entities/: __init__.py  base.py  body.py  conf.py  cookie.py  error.py  headers.py  openapi.py
src/domain/entities/auth/: __init__.py  token.py
src/domain/entities/bot/: __init__.py  bot.py  report.py
src/domain/entities/chatgpt/: __init__.py  body.py  file.py  headers.py
src/domain/entities/core/: __init__.py  base.py  conf.py  engine.py  headers.py  media.py  openapi.py  repository.py  table.py  task.py  user.py  webhook.py
src/domain/entities/instagram/: __init__.py  body.py  sesson.py
src/domain/entities/pixverse/: __init__.py  body.py  headers.py
src/domain/entities/qwen/: __init__.py  body.py  headers.py
src/domain/entities/topmedia/: __init__.py  body.py  headers.py  params.py
src/domain/entities/typing/: __init__.py
src/domain/errors/: __init__.py  account.py  auth.py  auth_user.py  calories.py  chatgpt.py  engine.py  instagram.py  pixverse.py  topmedia.py
src/domain/jwt/: __init__.py  core.py
src/domain/repositories/: __init__.py
src/domain/repositories/engines/: __init__.py
src/domain/tools/: __init__.py  account.py  auth.py  autodocs.py  error.py  lock.py  locks.py  media.py  save_file.py  upload_image.py  user.py  webhhok.py
src/domain/typing/: __init__.py
src/domain/typing/enums/: __init__.py  auth.py  endpoint.py  env.py  instagram.py  model.py  quality.py  request.py  token.py  url.py
src/domain/typing/types/: __init__.py  model.py  token.py
src/infrastructure/tasks/pixverse/: __init__.py  account.py  core.py  style.py  template.py
src/interface/handlers/: __init__.py  error.py
src/interface/middleware/: __init__.py  upload.py
src/interface/schemas/api/: __init__.py  account.py  application.py  auth_user.py  style.py  (+7 more)
src/interface/server/: routing.py
(+239 files in other folders)
