[project]
name = "pixverse-app"
version = "0.1.0"
description = ""
authors = [
    {name = "usvvdev",email = "usv.dev@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "selenium (>=4.33.0,<5.0.0)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "pytest-shutil (>=1.8.1,<2.0.0)",
    "selenium-wire (>=5.1.0,<6.0.0)",
    "python-io (>=0.3,<0.4)",
    "blinker (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
